[fix] index.html

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <div class="section-body">
      <ul>
       <li class="project">
-       <span class="project-name"><a href="energi-dan-sda/penerimaan_dan_dbh_minyak_bumi/">Penerimaan dan Dana Bagi Hasil Minyak Bumi</a></span>
-       <span class="project-desc">Penerimaan dan Dana Bagi Hasil per Daerah dari Minyak Bumi</span>
-       <span class="project-desc">Dataset : http://data.go.id/dataset/penerimaan-dan-dana-bagi-hasil-per-daerah-dari-minyak-bumi</span>
+       <span class="project-name"><a href="energi-dan-sda/penerimaan_dan_dbh_minyak_bumi/">DBH Minyak Bumi</a></span>
+       <span class="project-desc">Penerimaan dan Dana Bagi Hasil per Daerah dari Minyak Bumi
+       <br />Dataset : <a href="http://data.go.id/dataset/penerimaan-dan-dana-bagi-hasil-per-daerah-dari-minyak-bumi">http://data.go.id/dataset/penerimaan-dan-dana-bagi-hasil-per-daerah-dari-minyak-bumi</a></span>
       </li>
      </ul>
     </div>
