index.html: add explorations github repository

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
    <footer>
     <p>Feel free to clone or fork on <a href="https://github.com/b2b-web-id/data.id-dashboard">https://github.com/b2b-web-id/data.id-dashboard</a></p>
+    <p>Data exploration steps can be clone or fork on <a href="https://github.com/b2b-web-id/data.id-analytics">https://github.com/b2b-web-id/data.id-analytics</a></p>
     <p>Licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons</a>.</p>
    </footer>
 
