--- a/energi-dan-sda/index.html
+++ b/energi-dan-sda/index.html
@@ -4,10 +4,10 @@
  <head>
 
   <link rel="dns-prefecth" href="//yht.web.id" />
-  <link rel="dns-prefecth" href="//labs.yht.web.id" />
+  <link rel="dns-prefecth" href="//b2b.web.id" />
   <link rel="dns-prefecth" href="//github.com" />
   <link rel="dns-prefecth" href="//kalamangga.net" />
-  <link rel="dns-prefecth" href="//piwik.kalamangga.net" />
+  <link rel="dns-prefecth" href="//cdn.staticaly.com" />
   <link rel="dns-prefecth" href="//creativecommons.org" />
   <link rel="dns-prefecth" href="//maps.google.com" />
 
@@ -22,12 +22,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
-  <link href="http://labs.yht.web.id/assets/normalize.css" rel="stylesheet" type="text/css" />
-  <link href="http://labs.yht.web.id/assets/screen.css" rel="stylesheet" type="text/css" />
-  <link href="http://labs.yht.web.id/assets/syntax.css" rel="stylesheet" type="text/css" />
-  <link href="http://labs.yht.web.id/assets/font-awesome.css" rel="stylesheet" type="text/css" />
+  <link href="//cdn.staticaly.com/gh/yht/labs.yht.web.id/master/assets/normalize.css" rel="stylesheet" type="text/css" />
+  <link href="//cdn.staticaly.com/gh/yht/labs.yht.web.id/master/assets/screen.css" rel="stylesheet" type="text/css" />
+  <link href="//cdn.staticaly.com/gh/yht/labs.yht.web.id/master/assets/syntax.css" rel="stylesheet" type="text/css" />
+  <link href="//cdn.staticaly.com/gh/yht/labs.yht.web.id/master/assets/font-awesome.css" rel="stylesheet" type="text/css" />
 
-  <link rel="shortcut icon" href="http://labs.yht.web.id/assets/icon.png" />
+  <link rel="shortcut icon" href="//cdn.staticaly.com/gh/yht/labs.yht.web.id/master/assets/icon.png" />
   <link rel="canonical" href="//data-id.b2b.web.id" />
   <link rel="next" href="//www.b2b.web.id" />
 
